--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
             <div class="tabs">
                 <button class="tab-btn active" data-target="help-units" data-i18n="tab_units">Units</button>
                 <button class="tab-btn" data-target="help-calendar" data-i18n="tab_calendar">Calendar</button>
+                <button class="tab-btn" data-target="help-support" data-i18n="tab_support">Support</button>
             </div>
 
             <div id="help-units" class="tab-content active">
@@ -275,6 +276,12 @@
                     <li><strong>1 é</strong> = <span data-i18n="help_e_desc">6 U (A "Week")</span></li>
                     <li><strong>1 Y</strong> = <span data-i18n="help_y_desc">285 U (A "Year")</span></li>
                 </ul>
+            </div>
+
+            <div id="help-support" class="tab-content">
+                <p class="desc">GitHub: <a href="https://github.com/disxord888-hash/Richb_timer/tree/main"
+                        target="_blank"
+                        rel="noopener noreferrer">https://github.com/disxord888-hash/Richb_timer/tree/main</a></p>
             </div>
         </div>
     </div>
